--- a/Cooking_app/templates/search.html
+++ b/Cooking_app/templates/search.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-{{% load static %}}
+{% load static %}
 
 <html lang="en">
 <head>
@@ -9,10 +9,10 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Martian+Mono:wght@300;400;500;600&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'css/common/header.css' %]">
-  <link rel="stylesheet" href="{% static 'css/common/sidebar.css' %]">
-  <link rel="stylesheet" href="{% static 'css/common/general.css' %]">
-  <link rel="stylesheet" href="{% static 'css/search/main.css' %]">
+  <link rel="stylesheet" href="{% static 'css/common/header.css' %}">
+  <link rel="stylesheet" href="{% static 'css/common/sidebar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/common/general.css' %}">
+  <link rel="stylesheet" href="{% static 'css/search/main.css' %}">
 
   <title>Searching</title>
 </head>
