--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -1,4 +1,4 @@
-{{% load static %}}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,10 +10,10 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@300;400;500;600&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'css/common/header.css' %]">
-  <link rel="stylesheet" href="{% static 'css/common/sidebar.css' %]">
-  <link rel="stylesheet" href="{% static 'css/common/general.css' %]">
-  <link rel="stylesheet" href="{% static 'css/index/main.css' %]">
+  <link rel="stylesheet" href="{% static 'css/common/header.css' %}">
+  <link rel="stylesheet" href="{% static 'css/common/sidebar.css' %}">
+  <link rel="stylesheet" href="{% static 'css/common/general.css' %}">
+  <link rel="stylesheet" href="{% static 'css/index/main.css' %}">
 
   <title>Cooking Website</title>
   
@@ -26,7 +26,7 @@
 
     <!-- Logo website container -->
     <div class = "logo-container">
-      <a class = "logo-a" href="index.html">
+      <a class = "logo-a" href="{% url 'index' %}">
         <img class = "logo-img" src="{% static '/images/logo.png' %}" alt="">
       </a>
     </div>
@@ -35,17 +35,17 @@
     <div class = "sidebar-main"> 
 
       <div id = "container-0">
-        <div id = "container-00">
+        <div style="visibility: {% if user %} hidden {% else %} visible {% endif %};" id = "container-00">
           <button type="button" id = "JoinUsButton" onclick="login()">
             <span>
               Join Us
             </span>
           </button>
         </div>
-        <div id = "container-01">
+        <div style="visibility: {% if user %} visible{% else %} hidden {% endif %};" id = "container-01">
           <a href="/profile.html">
             <img src="{% static '/icons/user.png' %}" alt="">
-            <p>Hoang Phu</p>
+            <p>{{user.username}}</p>
           </a>
         </div>
       </div>
@@ -185,31 +185,36 @@
       </div>
 
       <div id = "right-header">
-        <div id = "container-10">
-          <button id = "JoinUsButton2" onclick="login()">
-            <span>
-              Log In / Sign Up
-            </span>
-          </button>
-        </div>
-        <div id = "container-11">
-          
-          <div class = "dropdown">
-            <span class = "username-header" onclick="displayDropdown()">Hoang Phu</span>
-            <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
-            <div id="my-dropdown" class="dropdown-content">
-              <a href="/profile.html">Profile</a>
-              <a href="/profile.html">Saved Recipes</a>
-              <a href="/profile.html">Settings</a>
-              <a href="/login.html" 
-                  onclick="return logout();"
-              >
-                  Log out
-              </a>
-            </div>
+        
+          <div style=" visibility: {% if user  %} hidden {% else %} visible {% endif %}; " 
+          id = "container-10">
+            <button id = "JoinUsButton2" onclick="login()">
+              <span>
+                Log In / Sign Up
+              </span>
+            </button>
           </div>
+      
+          <div style=" visibility: {% if user %} visible {% else %} hidden {% endif %}" id = "container-11">
+            
+            <div class = "dropdown">
+              <span class = "username-header" onclick="displayDropdown()"> {{username}}</span>
+              <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
+              <div id="my-dropdown" class="dropdown-content">
+                <a href="/profile.html">Profile</a>
+                <a href="/profile.html">Saved Recipes</a>
+                <a href="/profile.html">Settings</a>
+                <a href="/login.html" 
+                    onclick="return logout();"
+                >
+                    Log out
+                </a>
+              </div>
+            </div>
+            
+          </div>
+        
           
-        </div>
 
       </div>
 
@@ -833,11 +838,15 @@
   </main>
 </body>
 
+{% if user %}
+  
+{% endif %}
+
 <!-- javascript Code -->
 <script>
   initialize();
 
-  function initialize(){
+  {% comment %} function initialize(){
     if(localStorage.getItem("login") === null || 
         localStorage.getItem('login') == 'no')
         {
@@ -857,7 +866,7 @@
     }
 
   }
-  
+   {% endcomment %}
   window.onclick = function(event) {
     if (!event.target.matches('.username-header') && !event.target.matches('.profile-header')) {
       if (document.getElementById("my-dropdown").style.display == "block"){
@@ -915,14 +924,14 @@
   }
 
   function login(){
-    window.location.href = "/login.html";
+    window.location.href = "{% url 'login' %}";
   }
 
   function PostARecipe(){
     if(localStorage.getItem('login') === null ||
         localStorage.getItem('login') == 'no'){
         if(confirm("You need to login")){
-          window.location.href = "/login.html";
+          window.location.href = "{% url 'login' %}";
         }
         else{
         }
