--- a/Cooking_app/templates/signup.html
+++ b/Cooking_app/templates/signup.html
@@ -1,4 +1,4 @@
-{{% load static %}}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -11,8 +11,8 @@
 
   <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&family=Martian+Mono:wght@300;400;500;600&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;1,300&family=Roboto:ital,wght@0,300;0,500;0,700;1,400&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'css/login_signup/general.css' %]">
-  <link rel="stylesheet" href="{% static 'css/login_signup/main.css' %]">
+  <link rel="stylesheet" href="{% static 'css/login_signup/general.css' %}">
+  <link rel="stylesheet" href="{% static 'css/login_signup/main.css' %}">
 
   <title>Signup</title>
 </head>
@@ -27,7 +27,7 @@
           Nothing as creative as cooking
         </q>
 
-        <a href="/login.html">
+        <a href="{% url 'login' %}">
           <button id = "back-to-log-in-button" onclick="toLogin()">
             &#8592
           </button>
@@ -42,7 +42,7 @@
         <!-- Form -->
         <form 
               id = "signup-form"
-              
+              method = "POST"
         >
           <p id = "create-an-account">Create an account</p>
           <p id = "Your-infomation">Your information</p>
@@ -146,7 +146,7 @@
       }
       else if(valid){
         document.getElementById("signup-form").submit();
-        window.location.href = "/login.html";
+        window.location.href = "{% url 'login' %}";
       }
     }
   </script>
