--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -245,7 +245,7 @@
           <p style="height: 30px;">
 
           </p>
-          <form class = "form-recipe" action="">
+          <form method="POST" class = "form-recipe" action="">
             <input 
             name = "title-recipe" 
             id = "title-recipe" 
