--- a/Cooking_app/templates/profile.html
+++ b/Cooking_app/templates/profile.html
@@ -208,10 +208,11 @@
         <div id = "open-file-img">
           <input type="file" id="img-profile" name="img-profile" accept="image/*">
         </div>
+
         <button id = "log-out-btn">
-          <span>
-            Log out
-          </span>
+          
+          <a Log out
+          
         </button>
       </div>
       <div id = "brief-infomation-container">
