--- a/Cooking_app/templates/login.html
+++ b/Cooking_app/templates/login.html
@@ -36,16 +36,14 @@
           And, happy cooking :)
         </div>
 
+        
+        
+        <div style="height: 35px;"> </div>
         {% if messages %}
-        <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-        </ul>
+          {% for message in messages %}
+            <script> alert("{{ message }}") </script>
+          {% endfor %}
         {% endif %}
-        
-        <div style="height: 35px;"></div>
-        
         <input id = "username-input" 
               name = "username-input" 
               class = "input-shape-login"  
