changing front-end

--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -163,7 +163,7 @@
     <header id = "header">
       <div id = "left-header">
         <img id = "icon-nav"  onclick="openNav()" src="{% static '/icons/nav.png' %}" alt="nav">
-        <a href="index.html">
+        <a href="index">
           <img id = "logo-img2" src="{% static '/images/logo2.png' %}" alt="">
         </a>
       </div>
