--- a/Cooking_app/templates/index.html
+++ b/Cooking_app/templates/index.html
@@ -43,9 +43,9 @@
           </button>
         </div>
         <div style="visibility: {% if user %} visible{% else %} hidden {% endif %};" id = "container-01">
-          <a href="/profile.html">
+          <a href="{% url 'profile' %}">
             <img src="{% static '/icons/user.png' %}" alt="">
-            <p>{{user.username}}</p>
+            <p>{{user.user.username}}</p>
           </a>
         </div>
       </div>
@@ -163,7 +163,7 @@
     <header id = "header">
       <div id = "left-header">
         <img id = "icon-nav"  onclick="openNav()" src="{% static '/icons/nav.png' %}" alt="nav">
-        <a href="index">
+        <a href="{% url 'index' %}">
           <img id = "logo-img2" src="{% static '/images/logo2.png' %}" alt="">
         </a>
       </div>
@@ -198,7 +198,7 @@
           <div style=" visibility: {% if user %} visible {% else %} hidden {% endif %}" id = "container-11">
             
             <div class = "dropdown">
-              <span class = "username-header" onclick="displayDropdown()"> {{user.username}}</span>
+              <span class = "username-header" onclick="displayDropdown()"> {{user.user.username}}</span>
               <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
               <div id="my-dropdown" class="dropdown-content">
                 <a href="{% url 'profile' %}">Profile</a>
@@ -929,17 +929,11 @@
   }
 
   function PostARecipe(){
-    if(localStorage.getItem('login') === null ||
-        localStorage.getItem('login') == 'no'){
-        if(confirm("You need to login")){
-          window.location.href = "{% url 'login' %}";
-        }
-        else{
-        }
-    }
-    else{
-      window.location.href = "/post_a_recipe.html";
-    }
+    
+      window.location.href = "{% url 'post_a_recipe' %}";
+      
+    
+
   }
   
 </script>
