--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -24,7 +24,7 @@
   <header id = "header">
     <div id = "left-header">
       <img id = "icon-nav"  onclick="openNav()" src="{% static '/icons/nav.png' %}" alt="nav">
-      <a href="index">
+      <a href="{% url 'index' %}">
         <img id = "logo-img2" src="{% static '/images/logo2.png' %}" alt="">
       </a>
     </div>
@@ -59,10 +59,10 @@
           <span class = "username-header" onclick="displayDropdown()">Hoang Phu</span>
           <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
           <div id="my-dropdown" class="dropdown-content">
-            <a href="/profile.html">Profile</a>
-              <a href="/profile.html">Saved Recipes</a>
-              <a href="/profile.html">Settings</a>
-              <a href="/login.html" 
+            <a href="{% url 'profile' %}">Profile</a>
+              <a href="{% url 'profile' %}">Saved Recipes</a>
+              <a href="{% url 'profile' %}">Settings</a>
+              <a href="{% url 'login' %}" 
                   onclick="return logout();"
               >
                   Log out
@@ -79,7 +79,7 @@
 
     <!-- Logo website container -->
     <div class = "logo-container">
-      <a class = "logo-a" href="index">
+      <a class = "logo-a" href="{% url 'index' %}">
         <img class = "logo-img" src="{% static '/images/logo.png' %}" alt="">
       </a>
     </div>
@@ -260,7 +260,7 @@
           <p style="height: 30px;">
 
           </p>
-          <form method="POST" class = "form-recipe" action="">
+          <form method="POST" id = "form-recipe" action="">
             <input 
             name = "title-recipe" 
             id = "title-recipe" 
