--- a/Cooking_app/templates/profile.html
+++ b/Cooking_app/templates/profile.html
@@ -24,7 +24,7 @@
   <header id = "header">
     <div id = "left-header">
       <img id = "icon-nav"  onclick="openNav()" src="{% static '/icons/nav.png' %}" alt="nav">
-      <a href="index">
+      <a href="{% url 'index' %}">
         <img id = "logo-img2" src="{% static '/images/logo2.png' %}" alt="">
       </a>
     </div>
@@ -33,6 +33,8 @@
 
       <!-- HEADER SEARCH -->
       <form action="/search.html">
+        {% csrf_token %}
+
         <input id = "header-search" 
         name = "header-search"
         type="text" 
@@ -56,14 +58,14 @@
       </div>
       <div id = "container-11">
         <div class = "dropdown">
-          <span class = "username-header" onclick="displayDropdown()">Hoang Phu</span>
+          <span class = "username-header" onclick="displayDropdown()">{{user_info.user.username}}</span>
           <img class = "profile-header" onclick="displayDropdown()" src="{% static '/icons/user.png' %}" alt="">
           <div id="my-dropdown" class="dropdown-content">
-            <a href="/profile.html">Profile</a>
-              <a href="/profile.html">Saved Recipes</a>
-              <a href="/profile.html">Settings</a>
-              <a href="/login.html" 
-                  onclick="return logout();"
+            <a href="{% url 'profile' %}">Profile</a>
+              <a href="{% url 'profile' %}">Saved Recipes</a>
+              <a href="{% url 'profile' %}">Settings</a>
+              <a href="{% url 'logout' %}" 
+                  {% comment %} onclick="return logout();" {% endcomment %}
               >
                   Log out
               </a>
@@ -79,7 +81,7 @@
 
     <!-- Logo website container -->
     <div class = "logo-container">
-      <a class = "logo-a" href="index">
+      <a class = "logo-a" href="{% url 'index' %}">
         <img class = "logo-img" src="{% static '/images/logo.png' %}" alt="">
       </a>
     </div>
@@ -96,9 +98,9 @@
         </button>
         </div>
         <div id = "container-01">
-          <a href="/profile.html">
+          <a href="{% url 'profile' %}">
             <img src="{% static '/icons/user.png' %}" alt="">
-            <p>Hoang Phu</p>
+            <p>{{user_info.user.username}}</p>
           </a>
         </div>
       </div>
@@ -223,22 +225,17 @@
         </div>
 
         <button id = "log-out-btn">
-<<<<<<< HEAD
-          
-          <a Log out
-          
-=======
-          <a href="/login.html">
+          <a href="{% url 'logout' %}">
             Log out
           </a>
->>>>>>> 225cee57da121d3d7f9bc68d87dff15b1d4b0084
         </button>
       </div>
       <div id = "brief-infomation-container">
 
           <div id = "name-section">
             <!-- Fullname form -->
-            <form id = "fullname-form">
+            <form  method="POST" id = "fullname-form">
+              {% csrf_token %}
               <input 
                   type="text" 
                   name = "fullname-input" 
@@ -249,7 +246,7 @@
 
             <div id = "name-container">
               <p id = "fullname" onclick="displayModifyFullname()">
-                Lương Thanh Hoàng Phú
+                {{user_info.fullname}}
               </p>
               <div class = "editing-container">
                 <img class = "editing"src="{% static '/icons/editing.png' %}" alt="">
@@ -258,7 +255,8 @@
   
           </div>
           <div id = "bio-section">
-            <form id = "bio-form">
+            <form id = "bio-form" method="post">
+              {% csrf_token %}
               <textarea 
                   name = "bio-input" 
                   id = "bio-input"  
@@ -309,7 +307,8 @@
             
             <div id = "city-section" class = "text-location">
             <!-- Location form -->
-            <form id = "city-form" >
+            <form method="POST" id = "city-form" >
+              {% csrf_token %}
               <input type="text" 
                     name="city" 
                     id = "city"  
@@ -331,6 +330,7 @@
             <div id = "country-container" class = "text-location">
               <!-- Source code: https://gist.github.com/danrovito/977bcb97c9c2dfd3398a  -->
               <select id="country" name="country-form" class="country-form">
+                  
                   <option value="Country">Country</option>
                   <option value="Afghanistan">Afghanistan</option>
                   <option value="Åland Islands">Åland Islands</option>
@@ -709,7 +709,8 @@
         </div>
 
          <!-- SETTING -->
-        <form id = "display-settings" class = "display-section">
+        <form id = "display-settings" class = "display-section" method="POST">
+          {% csrf_token %}
           <p class = "heading-settings">
             PERSIONAL INFOMATION
           </p>
@@ -719,7 +720,7 @@
             
             <div class = "item-setting">
               <select name="gender" id="gender" class = "gender-form">
-                <option value="Gender">Gender</option>
+                <option selected="selected">{{ user_info.gender }}</option>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
                 <option value="Custom">Custom</option>
@@ -740,7 +741,7 @@
             <p style="width: 40px; opacity: 0;"></p>
 
             <div class = "item-setting">
-              <input type="date" id = "birthday" name = "birthday">
+              <input type="date" id="birthday" name="birthday" value="{{ user_info.bday }}">
               <p style=
               "
               width: 100%;
@@ -762,7 +763,7 @@
 
             <div class = "item-setting">
               
-              <input type="tel" name = "phone" id = "phone" placeholder="0123456789">
+              <input type="tel" name = "phone" id = "phone" placeholder="{{ user_info.phone }}">
               <p style=
               "
               width: 100%;
@@ -780,7 +781,7 @@
 
             <div class = "item-setting">
               
-              <input type="email" name = "email" id = "email" placeholder="20120548@student.hcmus.edu.vn">
+              <input type="email" name = "email" id = "email" value="{{ user_info.user.email }}">
               <p style=
               "
               width: 100%;
@@ -806,7 +807,7 @@
             <div class = "item-setting">
               
               <p id = "username">
-                luongthanhhoangphu2002
+                {{ user_info.user.username }}
               </p>
               <p style=
               "
@@ -824,7 +825,7 @@
             <p style="width: 40px; opacity: 0;"></p>
 
             <div class = "item-setting">
-              <input type="password" name = "newpassword" id = "newpassword" placeholder="New password">
+              <input type="password" name="newpassword" id="newpassword" placeholder="New password">
               <p style=
               "
               width: 100%;
