--- a/Cooking_app/templates/forgot_password2.html
+++ b/Cooking_app/templates/forgot_password2.html
@@ -13,39 +13,50 @@
   <title>Forgot Password</title>
 </head>
 <body>
-  <main>
-    <img class = "forgot-password-icon" src="/images/forgot-password.png" alt="">
-    <p id = "fgpw-p">
-      Forgot password?
-    </p>
-    <p class = "text1">
-      Enter your email address associated with your account and we'll send you a code to reset your password.
-    </p>
-    <form 
-        action="/forgot_password1.html" 
-        class="form-template"
+  <main
+  style="justify-content: center;"
+  >
+    <img class = "forgot-password-icon" src="/images/padlock.png" alt="">
+    <div style="height: 10px;"></div>
+    <p style=
+    "
+    font-size: 25px;
+    "
     >
-      <input id = "email" 
-            name = "email" 
-            type="email"
-            placeholder="Email"
+      New password
+    </p>
+
+    <form action="/login.html"
+          class="form-template"
+    >
+      <input id = "password" 
+            name = "password" 
+            type="password" 
+            placeholder="New password"
             class="input-template"
       >
-      
-      <button id = "next-btn" class = "btn-template">
-        Next
+
+      <input style = "margin-top: 10px;"
+            id = "repassword" 
+            name = "repassword" 
+            type="password" 
+            placeholder="Re-enter the password"
+            class="input-template"
+      >
+
+      <button id = "verify-btn" class = "btn-template">
+        Finish
       </button>
-
     </form>
-
-
+    
     <a id = "back-to-login" href="/login.html">
       Back to login
     </a>
 
+    </div>
   </main>
   <script>
-    
+
   </script>
 </body>
 </html>
