add upload img in post

--- a/Cooking_app/templates/post_a_recipe.html
+++ b/Cooking_app/templates/post_a_recipe.html
@@ -359,7 +359,19 @@
               </span>
             </button>
 
-            <button 
+            <p class = "name-sections">
+              Upload image
+            </p>
+
+            <input type="file" 
+                  name = "result-img"
+                  id = "result-img"
+                  accept="image/*"
+                  style="
+                  margin-top: 10px;       
+                  "
+            >
+                        <button 
                     type="button" 
                     id = "submit-btn" 
                     onclick="post()"
