Add static to templates

--- a/Cooking_app/templates/forgot_password.html
+++ b/Cooking_app/templates/forgot_password.html
@@ -23,15 +23,24 @@
     <p class = "text1">
       Enter your email address associated with your account and we'll send you a code to reset your password.
     </p>
-    <form 
-        action="/forgot_password1.html" 
+
+    {% if messages %}
+      {% for message in messages %}
+        <script> alert("{{ message }}") </script>
+      {% endfor %}
+    {% endif %}
+
+    <form
         class="form-template"
+        method="POST"
     >
+      {% csrf_token %}
       <input id = "email" 
             name = "email" 
             type="email"
             placeholder="Email"
             class="input-template"
+            value="{{ email }}"
       >
       
       <button id = "next-btn" class = "btn-template">
