--- a/Cooking_app/templates/login.html
+++ b/Cooking_app/templates/login.html
@@ -70,7 +70,7 @@
             >
             <span class="checkmark"></span>
           </label>
-          <a id = "Forgot-password-nav" href="#">
+          <a id = "Forgot-password-nav" href="{% url 'password_reset' %}">
             Forgot password
           </a>
         </div>
